Cleans up the Modal Makes it look better and adds a better icon to close

--- a/src/Components/Styling/variables.scss
+++ b/src/Components/Styling/variables.scss
@@ -5,5 +5,5 @@ $background-color: #535354;
 $text-light: #ddd;
 $text-dark: black;
 $text-hover: #fff;
-$shadow: honeydew;
+$shadow: rgba(68, 68, 68, 0.6);
 $modal-background: rgba(0, 0, 0, 0.4);
