--- a/src/Components/Styling/Modal.scss
+++ b/src/Components/Styling/Modal.scss
@@ -4,43 +4,64 @@
   position: fixed;
   border: 3px solid white;
   background-color: $secondary-color;
-  box-shadow: 5px 3px $shadow;
   opacity: 0.95;
-  border-radius: 12px;
-  padding: 1rem;
   z-index: 6;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 320px;
+  height: fit-content;
+  box-shadow: 5px 5px 5px $shadow;
 }
 
-.modalBackground {
-  background: $modal-background;
-  opacity: 1;
+// .modalBackground {
+//   background: $modal-background;
+//   opacity: 1;
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   z-index: 1;
+//   width: 100%;
+//   height: 500%;
+// }
+
+#modal_close {
   position: absolute;
   top: 0;
-  left: 0;
-  z-index: 1;
-  width: 100%;
-  height: 500%;
+  right: 0;
+  padding: 10px;
+  filter: drop-shadow(5px 5px 5px #222);
 }
 
-.modal-close {
-  float: right;
+.modalPicture {
+  width: 320px;
 }
 
-.floatRight {
-  float: right;
+.modal_header {
+  background-color: $primary-color;
+  min-height: fit-content;
+  padding: 10px;
+  width: 300px;
 }
 
-.smallIcon {
-    height: 20px;
-    display: block;
-    margin: 10px;
-  }
+.modal_details {
+  padding: 10px;
+}
 
-  .modalPicture{
-    height: 250px;
-    border-radius: 10px;
-    box-shadow: 1px 2px $shadow;
-  }
+.modal_title {
+  font-weight: bold;
+}
+
+.modal_header_title {
+  font-size: 1.5em;
+}
+
+.modal_quote {
+  font-style: italic;
+  font-family: fantasy;
+  font-weight: bold;
+}
+
+.modal_list {
+  padding: 4px;
+}
